--- a/New-Forest-Inn-images/Events-Promotions/events.html
+++ b/New-Forest-Inn-images/Events-Promotions/events.html
@@ -149,12 +149,13 @@
     Expect a variety of expertly crafted sausages, packed with flavour and served in true New Forest Inn style.
   </p>
   <p>
-    Find out more at<br>
-    <a href="https://www.thenewforestinn.co.uk" target="_blank">
-      www.thenewforestinn.co.uk
-    </a>
-  </p>
-</div>
+   Book your table now at<br>
+          <a href="https://www.thenewforestinn.co.uk/food/#restaurant_form" target="_blank">
+            www.thenewforestinn.co.uk
+          </a><br>
+          or call <strong>02380 284690</strong>.
+        </p>
+      </div>
 
       <div class="card">
         <img src="Mothers-Day-2026.jpg" alt="Mother's Day 2026 at The New Forest Inn">
