--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -165,6 +165,24 @@
         or call <strong>02380 175588</strong>.
       </p>
     </div>
+<div class="card">
+  <img src="Bold Mothers Day 2026.jpg" alt="Mother's Day at The Bold Forester, Marchwood">
+  <h3>Mother's Day</h3>
+  <p><strong>Sunday 15th March</strong></p>
+  <p>
+    Book now for Mother’s Day at <strong>The Bold Forester, Marchwood</strong>.
+    Treat that special lady in your life to a relaxed and welcoming celebration.
+  </p>
+  <p><strong>Carvery served all day.</strong></p>
+  <p><strong>Booking is essential.</strong></p>
+  <p>
+    Book your table now at<br>
+    <a href="https://www.theboldforesternewforest.co.uk/food/#_restaurant_form" target="_blank">
+      www.theboldforesternewforest.co.uk
+    </a><br>
+    or call <strong>02380 175588</strong>.
+  </p>
+</div>
 
   </div>
 </main>
