--- a/bold-forester-images/Events-Promotions/events.html
+++ b/bold-forester-images/Events-Promotions/events.html
@@ -176,13 +176,13 @@
   <p><strong>Carvery served all day.</strong></p>
   <p><strong>Booking is essential.</strong></p>
   <p>
-    Book your table now at<br>
-    <a href="https://www.theboldforesternewforest.co.uk/food/#_restaurant_form" target="_blank">
-      www.theboldforesternewforest.co.uk
-    </a><br>
-    or call <strong>02380 175588</strong>.
-  </p>
-</div>
+    Book your table now at<br><br>
+        <a href="https://www.theboldforesternewforest.co.uk/food/#restaurant_form" target="_blank" style="color:#e6d8b5; text-decoration:underline;">
+          www.theboldforesternewforest.co.uk
+        </a><br>
+        or call <strong>02380 175588</strong>.
+      </p>
+    </div>
 
   </div>
 </main>
