--- a/trustyservant.html
+++ b/trustyservant.html
@@ -144,6 +144,8 @@ A charming 16th century pub in Minstead, offering a warm welcome, fine ales, and
   <h2>Food Menus</h2>
   <div class="buttons">
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/breakfast-menu/Breakfast-Menu-Oct-2024.html">Breakfast Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/brunch-menu/Trusty Brunch Menu 2026.html">Brunch Menu</a>
+    <a href="Trusty-Servant-images/Trusty-Servant-Menus/light-lunch-menu/Trusty Light Lunch Menu 2026.html">Light Lunch Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/main-menu/Autumn-Menu-Final-oct-25.html">Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/sunday-menu/Autumn-Sunday-Menu-Final-oct-25.html">Sunday Menu</a>
     <a href="Trusty-Servant-images/Trusty-Servant-Menus/kids-menu/Tiny-tums-menu.html">Kids Menu</a>
