--- a/home.html
+++ b/home.html
@@ -268,54 +268,75 @@
 
     <div class="events-scroll">
 
-      <!-- GLOBAL VALENTINE'S CARD -->
-      <div class="event-card">
-        <img src="valentines-global.png" alt="Valentine’s">
-        <h3>Valentine’s</h3>
-        <p><strong>
-          Celebrate love across all Country Inns with romantic specials and classic favourites.
-        </strong></p>
-      </div>
+      <!-- EVENTS & FEATURES CARDS -->
 
-      <div class="event-card">
-        <img src="Country Inns Voucher.jpg" alt="Vouchers">
-        <h3>Gift Vouchers</h3>
-        <p><strong>
-          The perfect gift to enjoy all year round at any Country Inns pub.
-        </strong></p>
-        <a href="Voucher.html" class="btn">Learn More</a>
-      </div>
+<div class="event-card">
+  <img src="valentines-global.png" alt="Valentine’s">
+  <h3>Valentine’s</h3>
+  <p><strong>
+    Celebrate love across all Country Inns with romantic specials and classic favourites.
+  </strong></p>
+</div>
 
-      <div class="event-card">
-        <img src="Seasonal Specials.png" alt="Seasonal Specials">
-        <h3>Seasonal Specials</h3>
-        <p><strong>Menus inspired by the changing seasons of the New Forest.</strong></p>
-      </div>
+<!-- NEW MOTHER'S DAY CARD -->
+<div class="event-card">
+  <img src="mothers-day.png" alt="Mother’s Day">
+  <h3>Mother’s Day</h3>
+  <p><strong>
+    Treat Mum to something special with a delicious Sunday roast, sweet treats and quality family time.  
+    Tables fill fast – book early to avoid missing out.
+  </strong></p>
+</div>
 
-      <div class="event-card">
-        <img src="Roast Pork.jpg" alt="Sunday Roast">
-        <h3>Sunday Roasts</h3>
-        <p><strong>Traditional roasts with all the trimmings, every Sunday.</strong></p>
-      </div>
+<div class="event-card">
+  <img src="Country Inns Voucher.jpg" alt="Vouchers">
+  <h3>Gift Vouchers</h3>
+  <p><strong>
+    The perfect gift to enjoy all year round at any Country Inns pub.
+  </strong></p>
+  <a href="Voucher.html" class="btn">Learn More</a>
+</div>
 
-      <div class="event-card">
-        <img src="Dog Friendly.jpg" alt="Dog Friendly">
-        <h3>Dog Friendly</h3>
-        <p><strong>Four-legged friends welcome at all our pubs.</strong></p>
-      </div>
+<div class="event-card">
+  <img src="Seasonal Specials.png" alt="Seasonal Specials">
+  <h3>Seasonal Specials</h3>
+  <p><strong>
+    Menus inspired by the changing seasons of the New Forest.
+  </strong></p>
+</div>
 
-      <div class="event-card">
-        <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
-        <h3>Pouring Quality</h3>
-        <p><strong>Local ales and carefully chosen wines at every pub.</strong></p>
-      </div>
+<div class="event-card">
+  <img src="Roast Pork.jpg" alt="Sunday Roast">
+  <h3>Sunday Roasts</h3>
+  <p><strong>
+    Traditional roasts with all the trimmings, every Sunday.
+  </strong></p>
+</div>
 
-      <div class="event-card">
-        <img src="proudly local.png" alt="Proudly Local">
-        <h3>Proudly Local</h3>
-        <p><strong>Supporting local producers across the New Forest.</strong></p>
-        <a href="local.html" class="btn">Discover Our Partners</a>
-      </div>
+<div class="event-card">
+  <img src="Dog Friendly.jpg" alt="Dog Friendly">
+  <h3>Dog Friendly</h3>
+  <p><strong>
+    Four-legged friends welcome at all our pubs.
+  </strong></p>
+</div>
+
+<div class="event-card">
+  <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
+  <h3>Pouring Quality</h3>
+  <p><strong>
+    Local ales and carefully chosen wines at every pub.
+  </strong></p>
+</div>
+
+<div class="event-card">
+  <img src="proudly local.png" alt="Proudly Local">
+  <h3>Proudly Local</h3>
+  <p><strong>
+    Supporting local producers across the New Forest.
+  </strong></p>
+  <a href="local.html" class="btn">Discover Our Partners</a>
+</div>
 
     </div>
   </section>
