--- a/home.html
+++ b/home.html
@@ -271,7 +271,7 @@
       <!-- EVENTS & FEATURES CARDS -->
 
 <div class="event-card">
-  <img src="valentines-global.png" alt="Valentine’s">
+  <img src="Valentines.png" alt="Valentine’s">
   <h3>Valentine’s</h3>
   <p><strong>
     Celebrate love across all Country Inns with romantic specials and classic favourites.
