--- a/home.html
+++ b/home.html
@@ -280,7 +280,7 @@
 
 <!-- NEW MOTHER'S DAY CARD -->
 <div class="event-card">
-  <img src="mothers-day.png" alt="Mother’s Day">
+  <img src="Mothers Day.png" alt="Mother’s Day">
   <h3>Mother’s Day</h3>
   <p><strong>
     Treat Mum to something special with a delicious Sunday roast, sweet treats and quality family time.  
