--- a/home.html
+++ b/home.html
@@ -284,7 +284,7 @@
   <h3>Mother’s Day</h3>
   <p><strong>
     Treat Mum to something special with a delicious Sunday roast, sweet treats and quality family time.  
-    Tables fill fast – book early to avoid missing out.
+    Tables fill fast, so, book early to avoid missing out.
   </strong></p>
 </div>
 
