--- a/home.html
+++ b/home.html
@@ -7,7 +7,6 @@
   <link rel="icon" type="image/png" sizes="192x192" href="android-chrome-192x192.png">
 
   <style>
-    /* -------------------- GLOBAL STYLES -------------------- */
     body {
       margin: 0;
       font-family: Arial, sans-serif;
@@ -25,7 +24,6 @@
       text-align: center;
     }
 
-    /* -------------------- HEADER -------------------- */
     header {
       background: url('andy-newton-Od9W1_kbX8s-unsplash.jpg') center/cover no-repeat;
       color: white;
@@ -44,7 +42,6 @@
       margin-top: 10px;
     }
 
-    /* -------------------- GLOBAL EVENT NOTICE -------------------- */
     .global-notice {
       background: linear-gradient(135deg, #8b1d3a, #b03052);
       color: #fff;
@@ -61,21 +58,6 @@
       margin-top: 4px;
     }
 
-    .global-notice a {
-      display: inline-block;
-      margin-top: 8px;
-      background: rgba(255,255,255,0.15);
-      padding: 6px 14px;
-      border-radius: 6px;
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .global-notice a:hover {
-      background: rgba(255,255,255,0.25);
-    }
-
-    /* -------------------- PROMO BANNER -------------------- */
     .promo-banner {
       background: #2e7d32;
       color: white;
@@ -108,7 +90,6 @@
       background-color: #145016;
     }
 
-    /* -------------------- EVENTS CARDS -------------------- */
     .events-scroll {
       display: flex;
       gap: 20px;
@@ -142,6 +123,16 @@
       object-fit: cover;
     }
 
+    .event-card h3 {
+      margin: 15px 0 10px;
+    }
+
+    .event-card p {
+      padding: 0 15px 15px;
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+
     .event-card .btn {
       display: inline-block;
       background-color: #2e7d32;
@@ -157,7 +148,6 @@
       background-color: #1b5e20;
     }
 
-    /* -------------------- PUB GRID -------------------- */
     .pubs-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -192,7 +182,6 @@
       font-weight: bold;
     }
 
-    /* -------------------- ABOUT SECTION -------------------- */
     .about-banner {
       background: linear-gradient(135deg, #2e472e, #1e2b1e);
       color: #f4f4f4;
@@ -230,7 +219,6 @@
       background-color: #1b5e20;
     }
 
-    /* -------------------- FOOTER -------------------- */
     footer {
       background: #222;
       color: white;
@@ -243,105 +231,89 @@
 
 <body>
 
-  <!-- HEADER -->
   <header>
     <h1>Welcome to Country Inns</h1>
     <h3>Discover our 7 pubs in the heart of the New Forest</h3>
   </header>
 
-  <!-- GLOBAL VALENTINE'S NOTICE (change text for Mother's Day later) -->
   <div class="global-notice">
-    ❤️ Valentine’s Across All Country Inns
-    <span>Saturday 14th February</span>
+    🌷 Mother’s Day Across All Country Inns
+    <span>Sunday 15th March</span>
   </div>
 
-  <!-- PROMO BANNER -->
   <div class="promo-banner">
     Keep your receipt from any visit and enjoy <strong>25% OFF your food bill</strong> on your next visit
     <a href="promo-25.html" class="promo-btn">Learn More</a>
     <em>Valid January – March | Monday to Friday only</em>
   </div>
 
-  <!-- FEATURED SECTION -->
   <section>
     <h2>Featured at Every Pub</h2>
 
     <div class="events-scroll">
 
-      <!-- EVENTS & FEATURES CARDS -->
+      <div class="event-card">
+        <img src="Mothers Day.png" alt="Mother’s Day">
+        <h3>Mother’s Day</h3>
+        <p><strong>
+          Treat Mum to something special with a delicious Sunday roast, sweet treats and quality family time. 
+          Tables fill fast, so book early to avoid missing out.
+        </strong></p>
+      </div>
 
-<div class="event-card">
-  <img src="Valentines.png" alt="Valentine’s">
-  <h3>Valentine’s</h3>
-  <p><strong>
-    Celebrate love across all Country Inns with romantic specials and classic favourites.
-  </strong></p>
-</div>
+      <div class="event-card">
+        <img src="Country Inns Voucher.jpg" alt="Gift Vouchers">
+        <h3>Gift Vouchers</h3>
+        <p><strong>
+          The perfect gift to enjoy all year round at any Country Inns pub.
+        </strong></p>
+        <a href="Voucher.html" class="btn">Learn More</a>
+      </div>
 
-<!-- NEW MOTHER'S DAY CARD -->
-<div class="event-card">
-  <img src="Mothers Day.png" alt="Mother’s Day">
-  <h3>Mother’s Day</h3>
-  <p><strong>
-    Treat Mum to something special with a delicious Sunday roast, sweet treats and quality family time.  
-    Tables fill fast, so, book early to avoid missing out.
-  </strong></p>
-</div>
+      <div class="event-card">
+        <img src="Seasonal Specials.png" alt="Seasonal Specials">
+        <h3>Seasonal Specials</h3>
+        <p><strong>
+          Menus inspired by the changing seasons of the New Forest.
+        </strong></p>
+      </div>
 
-<div class="event-card">
-  <img src="Country Inns Voucher.jpg" alt="Vouchers">
-  <h3>Gift Vouchers</h3>
-  <p><strong>
-    The perfect gift to enjoy all year round at any Country Inns pub.
-  </strong></p>
-  <a href="Voucher.html" class="btn">Learn More</a>
-</div>
+      <div class="event-card">
+        <img src="Roast Pork.jpg" alt="Sunday Roast">
+        <h3>Sunday Roasts</h3>
+        <p><strong>
+          Traditional roasts with all the trimmings, every Sunday.
+        </strong></p>
+      </div>
 
-<div class="event-card">
-  <img src="Seasonal Specials.png" alt="Seasonal Specials">
-  <h3>Seasonal Specials</h3>
-  <p><strong>
-    Menus inspired by the changing seasons of the New Forest.
-  </strong></p>
-</div>
+      <div class="event-card">
+        <img src="Dog Friendly.jpg" alt="Dog Friendly">
+        <h3>Dog Friendly</h3>
+        <p><strong>
+          Four-legged friends welcome at all our pubs.
+        </strong></p>
+      </div>
 
-<div class="event-card">
-  <img src="Roast Pork.jpg" alt="Sunday Roast">
-  <h3>Sunday Roasts</h3>
-  <p><strong>
-    Traditional roasts with all the trimmings, every Sunday.
-  </strong></p>
-</div>
+      <div class="event-card">
+        <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
+        <h3>Pouring Quality</h3>
+        <p><strong>
+          Local ales and carefully chosen wines at every pub.
+        </strong></p>
+      </div>
 
-<div class="event-card">
-  <img src="Dog Friendly.jpg" alt="Dog Friendly">
-  <h3>Dog Friendly</h3>
-  <p><strong>
-    Four-legged friends welcome at all our pubs.
-  </strong></p>
-</div>
-
-<div class="event-card">
-  <img src="Local Ales & Fine Wines.png" alt="Pouring Quality">
-  <h3>Pouring Quality</h3>
-  <p><strong>
-    Local ales and carefully chosen wines at every pub.
-  </strong></p>
-</div>
-
-<div class="event-card">
-  <img src="proudly local.png" alt="Proudly Local">
-  <h3>Proudly Local</h3>
-  <p><strong>
-    Supporting local producers across the New Forest.
-  </strong></p>
-  <a href="local.html" class="btn">Discover Our Partners</a>
-</div>
+      <div class="event-card">
+        <img src="proudly local.png" alt="Proudly Local">
+        <h3>Proudly Local</h3>
+        <p><strong>
+          Supporting local producers across the New Forest.
+        </strong></p>
+        <a href="local.html" class="btn">Discover Our Partners</a>
+      </div>
 
     </div>
   </section>
 
-  <!-- PUB GRID -->
   <section>
     <h2>Explore Our Pub Family</h2>
 
@@ -357,7 +329,6 @@
     </div>
   </section>
 
-  <!-- ABOUT -->
   <section class="about-banner">
     <h2>About Country Inns</h2>
     <p>
@@ -367,7 +338,6 @@
     <a href="about.html" class="about-btn">Read More</a>
   </section>
 
-  <!-- FOOTER -->
   <footer>
     <p>&copy; 2025 Country Inns | Proudly serving the New Forest</p>
   </footer>
