--- a/home.html
+++ b/home.html
@@ -329,6 +329,17 @@
     </div>
   </section>
 
+  <section>
+  <h2>Country Inns Journal</h2>
+  <p>News & events across ALL our pubs.</p>
+
+  <div class="journal-box">
+    <a href="https://countryinnsnewforest.blogspot.com/" target="_blank" class="journal-button">
+      Visit the Journal →
+    </a>
+  </div>
+</section>
+  
   <section class="about-banner">
     <h2>About Country Inns</h2>
     <p>
