--- a/home.html
+++ b/home.html
@@ -280,14 +280,13 @@ Supporting local producers across the New Forest.
 <a class="pub-tile" href="find-us.html"><img src="find us.png"><span>Find Our Nearest Pub</span></a> 
 </div> 
 </section> 
-<section> 
-<h2>Country Inns Journal</h2> 
-<p>News & events across ALL our pubs.</p> 
-<div class="journal-box"> 
-<a href="https://countryinnsnewforest.blogspot.com/" target="_self"> 
-Visit the Journal → 
-</a> 
-</div> 
+<section class="journal-preview">
+  <h2>Latest from Country Inns Journal</h2>
+  <div class="journal-card">
+    <h3>Discover What’s Happening Across Our Pubs</h3>
+    <p>From seasonal menus to special events and behind-the-scenes stories.</p>
+    <a href="https://countryinnsnewforest.blogspot.com/" target="_blank">Read the Journal →</a>
+  </div>
 </section> 
 <section class="about-banner"> 
 <h2>About Country Inns</h2> 
