--- a/home.html
+++ b/home.html
@@ -284,7 +284,7 @@ Supporting local producers across the New Forest.
   <h2>Latest from Country Inns Journal</h2>
   <div class="journal-card">
     <h3>Discover What’s Happening Across Our Pubs</h3>
-    <p>From seasonal menus to special events and behind-the-scenes stories.</p>
+    <p>For the latest News, Events, Promotions, and more.</p>
     <a href="https://countryinnsnewforest.blogspot.com/" target="_blank">Read the Journal →</a>
   </div>
 </section> 
