--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-How to change the blog to look more like my PWA? This is my whole home.html '<!DOCTYPE html> 
+'<!DOCTYPE html> 
 <html lang="en"> 
 <head> 
 <meta charset="UTF-8"> 
@@ -301,4 +301,4 @@ local produce and genuine hospitality.
 </footer> 
 <script src="app.js"></script> 
 </body> 
-</html>', and ALL its subpages have the same look, while my blog as the look as in the picture attached
+</html>
