--- a/home.html
+++ b/home.html
@@ -281,7 +281,7 @@ Supporting local producers across the New Forest.
 </div> 
 </section> 
 <section class="journal-preview">
-  <h2>Latest from Country Inns Journal</h2>
+  <h2>Latest from Country Inns</h2>
   <div class="journal-card">
     <h3>Discover What’s Happening Across Our Pubs</h3>
     <p>Latest News, Events, Promotions, and more.</p>
